# football_scout_rag

./: .env.example  .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt
football_scout_ai/: scout_agent.py
src/football_scout/: __init__.py  __main__.py  exceptions.py
src/football_scout/cli/: __init__.py  app.py
src/football_scout/config/: __init__.py  settings.py
src/football_scout/core/: __init__.py  agent.py  analyzer.py  scraper.py
src/football_scout/dashboard/: __init__.py  app.py
src/football_scout/llm/: __init__.py  client.py  prompts.py
src/football_scout/models/: __init__.py  player.py
src/football_scout/rag/: __init__.py  vector_store.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_analyzer.py  test_models.py
