[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "football-scout"
version = "1.0.0"
description = "AI-powered football scouting agent using RAG"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Yotam Braun" }
]
keywords = ["football", "soccer", "scouting", "AI", "RAG", "transfermarkt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "langchain-groq>=0.1.0",
    "langchain-community>=0.0.20",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "streamlit>=1.29.0",
    "nest-asyncio>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
football-scout = "football_scout.cli.app:app"

[project.urls]
Homepage = "https://github.com/yotambraun/football-scout-rag"
Repository = "https://github.com/yotambraun/football-scout-rag"

[tool.hatch.build.targets.wheel]
packages = ["src/football_scout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
